@@ -77,7 +77,8 @@ root_service_sexp="
       (startup-failures ())
       (status running)
       (one-shot? #f)
-      (transient? #f))"
+      (transient? #f)
+      (respawn-limit (5 . 7)))"
 
 # Define a helper procedure that resets timestamps in the 'status-changes'
 # property to make it easier to compare them.
@@ -116,7 +117,7 @@ $define_reset_timestamps
                (status-changes ((running . 0) (starting . 0)))
                (startup-failures ())
                (status running)
-               (one-shot? #f) (transient? #f))
+               (one-shot? #f) (transient? #f) (respawn-limit (5 . 7)))
              (service (version 0)
                (provides (bar)) (requires (foo))
                (respawn? #f) (docstring \"Bar!\")
@@ -125,7 +126,7 @@ $define_reset_timestamps
                (status-changes ())
                (startup-failures ())
                (status stopped)
-               (one-shot? #f) (transient? #f)))))))
+               (one-shot? #f) (transient? #f) (respawn-limit (5 . 7))))))))
 "
 
 # The 'start' command should return the service sexp on success.
@@ -152,7 +153,7 @@ $define_reset_timestamps
                (status-changes ((running . 0) (starting . 0)))
                (startup-failures ())
                (status running)
-               (one-shot? #f) (transient? #f))))))
+               (one-shot? #f) (transient? #f) (respawn-limit (5 . 7)))))))
 "
 
 # Make sure we get an 'error' sexp when querying a nonexistent service.
