@@ -13,6 +13,11 @@ Please send Shepherd bug reports to bug-guix@gnu.org.
 
 * Changes in 0.10.2
 
+** New #:respawn-limit parameter to ‘service’
+
+The ‘service’ form supports a new #:respawn-limit parameter to specify
+per-service respawn limits.
+
 ** New Bash completion
 
 A Bash completion file is now installed, providing tab completion for the
